--- a/configs/dino.yaml
+++ b/configs/dino.yaml
@@ -1,4 +1,4 @@
-description: "Restores air-images of person in a forest"
+description: "Restores air-images of person in a forest using pre-computed DinoV2 Embeddings"
 
 # Training parameters
 batch_size: 120
@@ -9,7 +9,6 @@ learning_rate: 0.001
 
 # Miscellaneous
 num_workers: 0
-experiment_name: "Test"
 checkpoint: null  # null in YAML represents None in Python
 test: false       # false in YAML represents False in Python
 pin_memory: false # false in YAML represents False in Python
@@ -17,7 +16,14 @@ pin_memory: false # false in YAML represents False in Python
 
 datamodule: "EmbeddingDataModule" # "EmbeddingDataModule", "ImageDataModule", "HFImageDataModule"
 model: "ModifiedConvHead" # "UNet", "ModifiedConvHead", ("DPT")
-
+backbone_size: "small"  # small, base, large
+# 
 early_stopping:
   patience: 5
   min_delta: 0.001
+
+wandb:
+  project: "CV2023-share"
+  group: "DINO ModifiedConvHead"
+  notes: "Testing DINO with ModifiedConvHead"
+  experiment_name: "DINO ModifiedConvHead"
