--- a/configs/unet.yaml
+++ b/configs/unet.yaml
@@ -1,4 +1,4 @@
-description: "Restores air-images of person in a forest"
+description: "Restores air-images of person in a forest using a simple UNet baseline"
 
 # Training parameters
 batch_size: 1
@@ -9,7 +9,6 @@ learning_rate: 0.001
 
 # Miscellaneous
 num_workers: 0
-experiment_name: "Test"
 checkpoint: null  # null in YAML represents None in Python
 test: false       # false in YAML represents False in Python
 pin_memory: false # false in YAML represents False in Python
@@ -30,4 +29,11 @@ img_standardization:
 
 
 # HFImageDataModule
+# just an example, not actually used here.
 backbone_model_name: "facebook/dpt-dinov2-small-nyu"
+
+wandb:
+  project: "CV2023-share"
+  group: "UNet"
+  notes: "Testing UNet baselines!"
+  experiment_name: "UNet standardization"
