--- a/configs/dino.yaml
+++ b/configs/dino.yaml
@@ -1,7 +1,7 @@
 description: "Restores air-images of person in a forest using pre-computed DinoV2 Embeddings"
 
 # Training parameters
-batch_size: 120
+batch_size: 192
 grad_accum_steps: 1
 n_epochs: 150
 max_grad_norm: 0.0
@@ -11,23 +11,30 @@ learning_rate: 0.001
 num_workers: 0
 checkpoint: null  # null in YAML represents None in Python
 test: false       # false in YAML represents False in Python
-pin_memory: false # false in YAML represents False in Python
+pin_memory: false
 
+device:
+  type: "cuda" # "cuda", "cpu"; null means auto-select cuda if available, else cpu
+  ids: [1,2,3] # [0], [0,1,2,3], [1,2,3]; null means auto-select all available GPUs
 
-data_limit: 9223372036854775807 # sys.maxsize = 9223372036854775807
-
-
+data:
+  limit: null # sys.maxsize = 9223372036854775807
+  oversample: true
 
 datamodule: "EmbeddingDataModule" # "EmbeddingDataModule", "ImageDataModule", "HFImageDataModule"
 model: "ModifiedConvHead" # "UNet", "ModifiedConvHead", ("DPT")
 backbone_size: "small"  # small, base, large
 # 
 early_stopping:
-  patience: 5
-  min_delta: 0.001
+  patience: 50
+  min_delta: 0
+
+img_standardization:
+  do_standardize: false  # not used here.
+  do_destandardize: false
 
 wandb:
   project: "CV2023-share"
   group: "DINO ModifiedConvHead"
   notes: "Testing DINO with ModifiedConvHead"
-  experiment_name: "DINO ModifiedConvHead"
+  experiment_name: "Small 1e-3"
