--- a/configs/unet.yaml
+++ b/configs/unet.yaml
@@ -13,6 +13,10 @@ checkpoint: null  # null in YAML represents None in Python
 test: false       # false in YAML represents False in Python
 pin_memory: false # false in YAML represents False in Python
 
+device:
+  type: "cuda" # "cuda", "cpu"
+  ids: [1,2,3] # [0], [0,1,2,3], [1,2,3], ...
+
 
 datamodule: "ImageDataModule" # "EmbeddingDataModule", "ImageDataModule", "HFImageDataModule"
 model: "UNet" # "UNet", "ModifiedConvHead", ("DPT")
@@ -21,8 +25,10 @@ early_stopping:
   patience: 10
   min_delta: 0
 
-data_limit: 9223372036854775807 # sys.maxsize = 9223372036854775807
-
+data:
+  limit: null # sys.maxsize = 9223372036854775807
+  oversample: false
+  
 # UNet
 img_standardization:
   do_standardize: true
