integrate grad loss

--- a/configs/dino.yaml
+++ b/configs/dino.yaml
@@ -1,9 +1,9 @@
 description: "Restores air-images of person in a forest using pre-computed DinoV2 Embeddings"
 
 # Training parameters
-batch_size: 192
+batch_size: 150
 grad_accum_steps: 1
-n_epochs: 150
+n_epochs: 120
 max_grad_norm: 0.0
 learning_rate: 0.001
 
@@ -19,7 +19,11 @@ device:
 
 data:
   limit: null # sys.maxsize = 9223372036854775807
-  oversample: true
+  oversample: false
+
+loss:
+  use_msge: false 
+  msge_weight: 1.0
 
 datamodule: "EmbeddingDataModule" # "EmbeddingDataModule", "ImageDataModule", "HFImageDataModule"
 model: "ModifiedConvHead" # "UNet", "ModifiedConvHead", ("DPT")
@@ -38,4 +42,4 @@ wandb:
   entity: "cv2023-a6"
   group: "DINO ModifiedConvHead"
   notes: "Testing DINO with ModifiedConvHead"
-  experiment_name: "Small 1e-3"
+  experiment_name: "Small 1e-3 + MSGE=1.0"
