--- a/configs/unet.yaml
+++ b/configs/unet.yaml
@@ -22,7 +22,7 @@ datamodule: "ImageDataModule" # "EmbeddingDataModule", "ImageDataModule", "HFIma
 model: "UNet" # "UNet", "ModifiedConvHead", ("DPT")
 
 early_stopping:
-  patience: 20
+  patience: 50
   min_delta: 0
 
 data:
@@ -31,24 +31,19 @@ data:
 
 loss:
   use_msge: true
-  msge_weight: 0.5
+  msge_weight: 2.0
 
 # UNet
 img_standardization:
   do_standardize: true
   do_destandardize: false
+  # these are pre-computed on the training set
   mean: 109.1209
   std: 18.0851
-
-
-# HFImageDataModule
-# just an example, not actually used here.
-backbone_model_name: "facebook/dpt-dinov2-small-nyu"
-residual: "False"
 
 wandb:
   project: "CV2023-share"
   entity: "cv2023-a6"
   group: "UNet"
   notes: "UNet baseline"
-  experiment_name: "UNet standardization-MSGE=0.5-lr0.0001"
+  experiment_name: "UNet standardization-MSGE=2.0 1e-4"
