--- a/configs/dino-dpt.yaml
+++ b/configs/dino-dpt.yaml
@@ -1,7 +1,7 @@
 description: "Restores air-images of person in a forest using Dinov2 Encoder and DPT Decoder"
 
 # Training parameters
-batch_size: 32
+batch_size: 40
 grad_accum_steps: 1
 n_epochs: 150
 max_grad_norm: 0.0
@@ -25,7 +25,7 @@ data:
 
 mixup:
   alpha: 1.0  # hyperparameter for beta distribution default: 1.0
-  prob: 0.0  # probability of applying mixup
+  prob: 0.25  # probability of applying mixup
 
 datamodule: "DPTImageDataModule" # "EmbeddingDataModule", "ImageDataModule", "DPTImageDataModule"
 
@@ -49,4 +49,4 @@ wandb:
   entity: "cv2023-a6"
   group: "DINO DPT"
   notes: "Testing DINO with DPT"
-  experiment_name: "Small 5e-5 MSGE 2.0 + FlipCrop"
+  experiment_name: "Small 5e-5 MSGE 2.0 + 0.5 Flip + 0.25 Mixup"
